# Smart_Inventory_Management_With_AI_ML_integration

./: LICENSE  Readme.md
GenAI/: GenAI.py  __init__.py  app.py  main.py  mongodb_connection.py  sql_connection.py  vector_database.py
MajorProject_API/: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
MajorProject_API/Employee/2025-01-27-105503_employees/: up.sql
MajorProject_API/Employee/2025-01-30-065951_sales/: down.sql  up.sql
MajorProject_API/Employee/2025-01-30-070518_logs/: down.sql  up.sql
MajorProject_API/Employee/2025-01-30-071244_orders/: up.sql
MajorProject_API/migrations/2025-01-27-105441_admin/: up.sql
MajorProject_API/src/: employee_schema.rs  main.rs  schema.rs
MajorProject_API/src/Request_microservice/: request.rs
MajorProject_API/src/connect_sql/: mod.rs  no_sql.rs  sql_handler.rs
MajorProject_API/src/handlers/: employee_handler.rs  mod.rs  tools.rs  user_handler.rs
MajorProject_API/src/models/: mod.rs  tools.rs  user_requests.rs
MajorProject_API/src/redis/: redis_connection.rs
MajorProject_API/src/routes/: user_routes.rs
Sales Analytics API/: main.py
frontend-final/: package-lock.json  package.json
frontend-final/src/: App.tsx  AppRoutes.tsx  LandingPage.tsx  Nav.tsx  ProtectedRoute.tsx  Transformation.tsx  index.css  main.jsx  main.tsx
redis_stream_Online_learning_ml/: GenAI_result_cache.py  electronic_products.txt  lag_mantanes.py  main.py  ml_traning.py  readdata.py  river_model.pkl  timepass.py
redis_stream_Online_learning_ml/AI_models/: atul_timepass_20250515062143_AI_model.pkl
(+40 files in other folders)
