[package]
name = "MajorProjectAPI"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "inventory-api"
#path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
diesel = {version = "2.2.7" , features = ["postgres","postgres_backend", "r2d2","chrono"]}
bcrypt = {version = "0.17.0"}
actix-cors = "0.7.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel_migrations = { version = "2.2.0" ,features = ["postgres"] }
serde_json = "1.0.138"
tracing = "0.1.41"
once_cell = "1.20.2"
dashmap = "6.1.0"
log = "0.4.25"
env_logger = "0.11.6"
http = "0.2.12"
mongodb = "2.8"
lazy_static = "1.5.0"
rand = "0.8.5"
futures = "0.3.31"
redis = { version = "0.29", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12.19", features = ["json"] }
urlencoding = "2.1.3"

